--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <h2 class="heading">Testimonials</h2>
             <div class="wrapper">
                 <div class="testimonial-item">
-                    <img src="/image/k3.jpg" alt="">
+                    <img src="./image/k3.jpg" alt="">
                     <h2>Marlilyn</h2>
                     <div class="rating">
                         <i class='bx bxs-star'id= "star"></i>
@@ -143,7 +143,7 @@
                 </div>
 
                 <div class="testimonial-item">
-                    <img src="/image/k1.jpg" alt="">
+                    <img src="./image/k1.jpg" alt="">
                     <h2>Julia</h2>
                     <div class="rating">
                         <i class='bx bxs-star'id= "star"></i>
@@ -156,7 +156,7 @@
                 </div>
 
                 <div class="testimonial-item">
-                    <img src="/image/k2.jpg" alt="">
+                    <img src="./image/k2.jpg" alt="">
                     <h2>Helan</h2>
                     <div class="rating">
                         <i class='bx bxs-star'id= "star"></i>
